feat: integrate AI-powered weekly journal reflection